# Hakkero

./: .gitignore  CMakeLists.txt  README.md  build.sh  flake.nix
.cache/clangd/index/: logger.cpp.63CE9C74F23796F7.idx  logger.hpp.1F2A87249BFEC4B2.idx  main.cpp.304D7A5394ED5F65.idx  test.cpp.032D9B9F1503C110.idx  test.hpp.C9A0AA1A8A65C35E.idx  time_utils.cpp.86D49B90B6A1600C.idx  time_utils.hpp.F59A2D0675D08B16.idx
core/: logger.cpp  logger.hpp  time_utils.cpp  time_utils.hpp
core/vulkan/: vulkan_command_buffer.cpp  vulkan_command_buffer.hpp  vulkan_device.cpp  vulkan_device.hpp  vulkan_image.cpp  vulkan_image.hpp  vulkan_init.cpp  vulkan_init.hpp  vulkan_instance.cpp  vulkan_instance.hpp  vulkan_pipeline.cpp  vulkan_pipeline.hpp  vulkan_render.cpp  vulkan_render.hpp  vulkan_surface.cpp  vulkan_surface.hpp  vulkan_swapchain.cpp  vulkan_swapchain.hpp  vulkan_types.cpp  vulkan_types.hpp  vulkan_utils.cpp  vulkan_utils.hpp  vulkan_validation.cpp  vulkan_validation.hpp
platform/window/glfw/: glfw_types.hpp
samples/: main.cpp
samples/Meow/: CMakeLists.txt  main.cpp
samples/Nesquik/: CMakeLists.txt  main.cpp
samples/Watership/: CMakeLists.txt
samples/shaders/: shader.vert
